# CAIP

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  quicktest.py  requirements.txt  roadmap.md
docs/: README.md
src/caip_responses/: __init__.py
src/caip_responses/cache/: __init__.py  redis_cache.py  response_cache.py
src/caip_responses/client/: __init__.py  async_client.py  config.py  sync_client.py
src/caip_responses/cost/: __init__.py  tracker.py
src/caip_responses/loop/: __init__.py  agent_loop.py  tool_executor.py
src/caip_responses/models/: __init__.py  common.py  errors.py  items.py  request.py  response.py  streaming.py  tools.py
src/caip_responses/plugins/: __init__.py  manager.py
src/caip_responses/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_compatible.py  openai_provider.py  registry.py  sarvam_provider.py
src/caip_responses/ratelimit/: __init__.py  limiter.py
src/caip_responses/store/: __init__.py  conversation_store.py  redis_store.py
src/caip_responses/stream/: __init__.py
src/caip_responses/tool_handlers/: __init__.py  base.py  code_interpreter.py  computer_use.py  file_search.py  image_generation.py  mcp.py  openai_delegator.py  registry.py  shell.py  web_search.py
tests/: conftest.py
tests/test_cache/: test_redis_cache.py  test_response_cache.py
tests/test_client/: test_async_client.py  test_conversation_store_integration.py  test_phase4_integration.py
tests/test_cost/: test_cost_tracker.py
tests/test_integration/: test_cross_provider.py
tests/test_loop/: test_agent_loop.py  test_tool_executor.py
tests/test_models/: test_items.py  test_request.py  test_response.py  test_streaming.py  test_tools.py
tests/test_plugins/: test_plugin_manager.py
tests/test_providers/: test_anthropic_provider.py  test_gemini_provider.py  test_ollama_provider.py  test_registry.py  test_sarvam_provider.py
tests/test_ratelimit/: test_rate_limiter.py
tests/test_store/: test_conversation_store.py  test_redis_store.py
tests/test_tool_handlers/: test_base.py  test_client_wiring.py  test_code_interpreter.py  test_computer_use.py  test_file_search.py  test_image_generation.py  test_mcp.py  test_openai_delegator.py  test_registry.py  test_shell.py  test_two_tier_dispatch.py  test_web_search.py
(+3 files in other folders)
