[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caip-responses-lib"
version = "0.1.0"
description = "Multi-provider LLM library implementing the OpenAI Responses API interface — same API for OpenAI, Anthropic, Gemini, and Sarvam"
requires-python = ">=3.11"
license = "MIT"
readme = "docs/README.md"
authors = [
    { name = "Conversational AI Platform Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
keywords = ["llm", "openai", "anthropic", "gemini", "responses-api", "multi-provider", "ai", "agent"]
dependencies = [
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
openai = ["openai>=2.20,<3"]
anthropic = ["anthropic>=0.40,<1"]
gemini = ["google-genai>=1.0,<2"]
redis = ["redis[hiredis]>=5.0,<6"]
mcp = ["mcp>=1.0,<2"]
# Use the OS trust store for TLS — needed for MCP/SSE behind corporate
# proxies that intercept HTTPS. Call truststore.inject_into_ssl() at startup.
truststore = ["truststore>=0.9"]
all = [
    "caip-responses-lib[openai]",
    "caip-responses-lib[anthropic]",
    "caip-responses-lib[gemini]",
    "caip-responses-lib[redis]",
    "caip-responses-lib[mcp]",
    "caip-responses-lib[truststore]",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3,<4",
    "ruff>=0.8,<1",
    "bandit>=1.8,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/caip_responses"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests requiring live API keys"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["caip_responses"]

[tool.bandit]
exclude_dirs = ["tests"]
